# dbt-lakehouse-poc

./: .dockerignore  .env.example  .gitignore  .vk-base-sha  DEMO-SCRIPT.md  Dockerfile  Makefile  README.md  demo.ipynb  docker-compose.yml  extract.py  iceberg_output.py  notebook.ipynb  notebook.py  pyproject.toml  requirements.txt  run.ps1  sonar-project.properties
.claude/: settings.json
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
.scannerwork/: report-task.txt
data/csv/: customers.csv  orders.csv  products.csv
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/marts/: orders_enriched.sql  orders_enriched_parquet.sql  schema.yml
dbt_project/models/reporting/: rpt_customer_summary.sql  rpt_product_performance.sql  rpt_revenue_by_category.sql  rpt_revenue_by_country.sql  schema.yml
dbt_project/models/staging/: schema.yml  sources.yml  stg_customers.sql  stg_orders.sql  stg_products.sql
diagrams/: pipeline-flow.excalidraw
scripts/: init-db.sql  seed.sh
tests/: test_e2e.py
