[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dbt-lakehouse-poc"
version = "0.2.0"
description = "Lakehouse pipeline PoC: MSSQL → Arrow Parquet → dbt/DuckDB → Apache Iceberg → Jupyter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "dbt-core==1.9.0",
    "dbt-duckdb==1.9.1",
    "duckdb>=1.1.0",
    "marimo<0.9.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "altair>=5.0.0",
    "pyodbc>=5.0.0",
    "pyiceberg[sql-sqlite]>=0.7.0",
    "jupyter>=1.0.0",
    "sqlalchemy>=2.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[project.urls]
Repository = "https://gitlab.com/richard-fellows/dbt-duckdb-poc"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "output*", "dbt_project*"]
