[project]
name = "dbt-lakehouse-poc"
version = "0.3.0"
description = "Lakehouse pipeline PoC: MSSQL → Arrow Parquet → dbt/DuckDB → Apache Iceberg → Jupyter"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "dbt-core==1.9.0",
    "dbt-duckdb==1.9.1",
    "duckdb>=1.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pyodbc>=5.0.0",
    "pyiceberg[rest,s3fs]==0.10.0",
    "jupyter>=1.0.0",
    "nbconvert>=7.0.0",
    "sqlalchemy>=2.0.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/RichardFellows/dbt-lakehouse-poc"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["data*", "output*", "dbt_project*"]
